fix(analytics): refine room type serialization and type constraint validation